# autogazelle-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
src/: BUILD.bazel  main.go
tools/: bazel
