load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ecosia/core/src",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)

go_binary(
    name = "src",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
